--- a/.classpath
+++ b/.classpath
@@ -22,20 +22,15 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.nuxeo.ide.SDK_CONTAINER"/>
 	<classpathentry kind="con" path="org.nuxeo.ide.SDK_TEST_CONTAINER"/>
 	<classpathentry kind="con" path="org.nuxeo.ide.SDK_USERLIB_CONTAINER"/>
-	<classpathentry kind="lib" path="src/main/resources/commons-net-1.4.1.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/jakarta-oro-2.0.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_91"/>
+	<classpathentry kind="lib" path="D:/shawn/sts_work/.metadata/.plugins/org.nuxeo.ide.connect/repository/test-nextcont-xiaowen-xi-0.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
